force-app/main/default/objects/Memory__c/Memory__c.object-meta.xml
<CustomObject>
    <label>Memory</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>