force-app/main/default/objects/Memory__c/fields/node__c.field-meta.xml
<CustomField>
    <fullName>node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Node</label>
    <referenceTo>Node__c</referenceTo>
    <relationshipLabel>Memory</relationshipLabel>
    <relationshipName>Memory</relationshipName>
    <type>Lookup</type>
</CustomField>