force-app/main/default/objects/Memory__c/fields/part_number__c.field-meta.xml
<CustomField>
    <fullName>part_number__c</fullName>
    <label>Part Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>